adjust biscuit scss

--- a/biscuit/stylesheets/_footer.scss
+++ b/biscuit/stylesheets/_footer.scss
@@ -5,9 +5,6 @@
   padding: 15px 5px;
   line-height: 20px;
   clear: both;
-  background: #4d3c33;
-  color: white;
-  a {
-    color: white;
-  }
+  background: #fafafa;
+  border: 1px solid #eee;
 }
