--- a/biscuit/stylesheets/_page.scss
+++ b/biscuit/stylesheets/_page.scss
@@ -1,14 +1,14 @@
 div.page {
-  width: 950px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 1000px;
+  display: flex;
+  align-items: center;
+  margin: auto;
 }
 
 div.page-contents
 {
-  width: 950px;
-  position: relative;
-  top: 0;
+  width: 1000px;
+  margin: 10px auto auto auto;
 }
 
 #page-left {
