rewrite commenting js code

--- a/orange/skins/qobo/templates/_layout.twig
+++ b/orange/skins/qobo/templates/_layout.twig
@@ -89,7 +89,6 @@
     </div>
 </div>
 {% block scripts %}{% endblock %}
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-<script src="/assets/common.js"></script>
+<script src="/assets/common_new.js"></script>
 </body>
 </html>
