implement journal writing + fix php 8.2 deprecation

--- a/orange/skins/qobo/templates/_layout.twig
+++ b/orange/skins/qobo/templates/_layout.twig
@@ -50,8 +50,9 @@
                 {% if user_data.powerlevel > 2 %}
                     <a class="menulink" href="/admin.php">Admin panel</a>
                 {% endif %}
+                <a class="menulink" href="/write.php">Write</a>
                 <a class="menulink" href="/upload.php">Upload</a>
-                <a class="menulink" href="logout.php">Log out</a>
+                <a class="menulink" href="/logout.php">Log out</a>
             {% else %}
                 <a class="menulink" href="/login.php">Login</a>
                 <a class="menulink" href="/register.php">Register</a>
