--- a/biscuit/stylesheets/_content_box.scss
+++ b/biscuit/stylesheets/_content_box.scss
@@ -29,8 +29,8 @@ div.content-header-right
     border: 1px solid #ffbf58;
     background: #ffffff;
     padding: 6px;
-    //margin-bottom: 7px;
     overflow: hidden;
+    word-break: break-word;
 
     .content-entry
     {
