--- a/biscuit/stylesheets/common.scss
+++ b/biscuit/stylesheets/common.scss
@@ -123,6 +123,7 @@ input[type]:not([type=file]):not([type=submit]):focus {
 @import 'banner';
 @import 'comments';
 @import 'sections';
+@import 'journals';
 
 @import 'watch_page';
 @import 'profile_page';
