--- a/orange/skins/qobo/templates/users.twig
+++ b/orange/skins/qobo/templates/users.twig
@@ -10,6 +10,7 @@
 				<th>Username</th>
 				<th style="width:180px">Registered on</th>
 				<th style="width:80px">Submissions</th>
+				<th style="width:80px">Journals</th>
 				<th style="width:80px">Followers</th>
 			</tr>
 			{% for user in users %}
@@ -18,6 +19,7 @@
 					<td>{{ user_link(user) }}</td>
 					<td class="center">{{ user.info.joined | date('Y-m-d H:i') }}</td>
 					<td class="center">{{ user.submissions }}</td>
+					<td class="center">{{ user.journals }}</td>
 					<td class="center">{{ user.info.followers }}</td>
 				</tr>
 			{% endfor %}
