--- a/biscuit/stylesheets/_profile_page.scss
+++ b/biscuit/stylesheets/_profile_page.scss
@@ -17,7 +17,7 @@ div.profile-box {
   .profile-box-pfp {
     width: $pfp-width-profiles;
     float: left;
-    padding-right: 10px;
+    margin-right: 10px;
 
     .pfp {
       width: $pfp-width-profiles;
